# mathrosetta

./: .gitignore  Cargo.toml  README.md  flake.nix  metadata.json
docs/: README.md  generate-docs.mjs
playground/: index.html  package.json  playground.js  style.css
policies/: resource_policy.pl  solver_policy.pl  trust_policy.pl
proofs/: proof_manifest.json  verify_isabelle.py
proofs/isabelle/: Analog.thy  Conduction.thy  Graph.thy  ROOT  Sovereign_Stack.thy  Static_Topology.thy  Topology.thy  Topology_Syntax.thy  WORM.thy  WORM_Receipt.thy
proofs/lean4/: lakefile.toml
proofs/lean4/Sovereign/: Analog.lean  Graph.lean  Main.lean  Netlist.lean  SovereignStack.lean  Topology.lean  TopologySyntax.lean  Worm.lean
proofs/lean4/Sovereign/Theorems/: Conduction.lean  FloatingPorts.lean  Reachability.lean  Topology.lean  Worm.lean
src/: ast.rs  dispatcher.rs  lib.rs  normalizer.rs  typer.rs  wasm.rs
src/emitters/: coq.rs  isabelle.rs  latex.rs  lean4.rs  mod.rs  smtlib.rs
src/nlp/: mod.rs
src/parser/: latex.rs  lean.rs  mod.rs  sympy.rs
src/proof/: backends.rs  bundle.rs  core.rs  ingest.rs  manifest.rs  mod.rs  status.rs  theorem_names.rs
src/worm/: chain.rs
theorems/: THEOREMS.md
