[package]
name = "mathir"
version = "0.1.0"
edition = "2021"
description = "MathIR — Canonical Mathematical Intermediate Representation for SnapKitty Rosetta"
license = "Apache-2.0"
authors = ["Ahmad Ali Parr"]

[lib]
name = "mathir"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sk-math"
path = "src/bin/sk_math.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
prost = "0.12"
tonic = "0.12"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
